SW-478 fix translation and laserhead name

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-09-17 13:14+0200\n"
-"PO-Revision-Date: 2021-09-17 13:29+0200\n"
+"POT-Creation-Date: 2021-09-17 14:20+0200\n"
+"PO-Revision-Date: 2021-09-17 14:21+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2535,11 +2535,11 @@ msgstr ""
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
 msgid ""
-"Read about what changes you can expect with a new and improved Laserhead Mr "
-"Beam II dreamcut [S]."
+"Read about the changes you can expect with the new and improved MrBeam II "
+"dreamcut [S] Laserhead."
 msgstr ""
 "Erfahre alles über die Änderungen, die du mit dem noch\n"
-"schnelleren Laserkopf Mr Beam II dreamcut [S] erwarten\n"
+"schnelleren Mr Beam II dreamcut [S] Laserkopf erwarten\n"
 "kannst."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
