SW-557 adjustment to the german translation

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2021-09-17 14:20+0200\n"
-"PO-Revision-Date: 2021-09-17 14:21+0200\n"
+"PO-Revision-Date: 2021-10-13 09:09+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2526,21 +2526,23 @@ msgid ""
 "However, we do not update your custom materials, this will need your "
 "personal testing and finetuning."
 msgstr ""
-"Das bedeutet dass wir die vorgefertigten Materialeinstellungen an den neuen "
-"Laserkopf anpassen solange er eingebaut ist um dir die bestmögliche "
-"Unterstützung dafür zu bieten.\n"
-"Was wir allerdings nicht aktualisieren sind deine gespeicherten "
-"benutzerdefinierten Material-Einstellungen, diese von dir selbst testen und "
-"abstimmen."
+"Das bedeutet, dass die voreingestellten Materialeinstellungen an den neuen "
+"Laserkopf angepasst werden, sobald dieser eingebaut und angeschlossen ist. "
+"So können wir dich bestmöglich bei der erfolgreichen Umsetzung deiner "
+"Projekte unterstützen.\n"
+"Deine mit dem Vorgängermodell abgespeicherten, individuellen "
+"Materialeinstellungen, werden allerdings nicht automatisch aktualisiert. In "
+"diesem Fall ist eine manuelle Anpassung der Parameter auf den neuen "
+"Laserkopf von dir erforderlich."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
 msgid ""
 "Read about the changes you can expect with the new and improved MrBeam II "
 "dreamcut [S] Laserhead."
 msgstr ""
-"Erfahre alles über die Änderungen, die du mit dem noch\n"
-"schnelleren Mr Beam II dreamcut [S] Laserkopf erwarten\n"
-"kannst."
+"Erfahre alles über die Vorteile und Neuerungen,\n"
+"die du mit dem schnelleren Laserkopf Mr Beam II dreamcut [S]\n"
+"erwarten kannst."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
 msgid "https://support.mr-beam.org/en/support/solutions/articles/43000640531"
