SW-557 added requested changes

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2021-09-17 14:20+0200\n"
-"PO-Revision-Date: 2021-10-13 09:09+0200\n"
+"PO-Revision-Date: 2021-10-14 11:34+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2513,7 +2513,7 @@ msgstr "Ein neuer Laserkopf wurde erkannt"
 msgid ""
 "Your new Mr Beam dreamcut [S] Laserhead has been successfully installed."
 msgstr ""
-"Dein neuer Mr Beam dreamcut [S] Laserkopf wurde erfolgreich installiert."
+"Dein neuer Mr Beam II dreamcut [S] Laserkopf wurde erfolgreich installiert."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:10
 msgid "With this Laserhead you can work now even faster."
@@ -2526,23 +2526,20 @@ msgid ""
 "However, we do not update your custom materials, this will need your "
 "personal testing and finetuning."
 msgstr ""
-"Das bedeutet, dass die voreingestellten Materialeinstellungen an den neuen "
-"Laserkopf angepasst werden, sobald dieser eingebaut und angeschlossen ist. "
-"So können wir dich bestmöglich bei der erfolgreichen Umsetzung deiner "
-"Projekte unterstützen.\n"
-"Deine mit dem Vorgängermodell abgespeicherten, individuellen "
-"Materialeinstellungen, werden allerdings nicht automatisch aktualisiert. In "
-"diesem Fall ist eine manuelle Anpassung der Parameter auf den neuen "
-"Laserkopf von dir erforderlich."
+"Das bedeutet, dass alle vorgefertigten Materialeinstellungen automatisch an "
+"den neuen Laserkopf angepasst wurden. So können wir dich bestmöglich bei der "
+"erfolgreichen Umsetzung deiner Projekte unterstützen. Deine mit dem "
+"Vorgängermodell gespeicherten, individuellen Materialeinstellungen werden "
+"allerdings nicht automatisch aktualisiert. In diesem Fall ist eine manuelle "
+"Anpassung der Parameter auf den neuen Laserkopf erforderlich."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
 msgid ""
 "Read about the changes you can expect with the new and improved MrBeam II "
 "dreamcut [S] Laserhead."
 msgstr ""
-"Erfahre alles über die Vorteile und Neuerungen,\n"
-"die du mit dem schnelleren Laserkopf Mr Beam II dreamcut [S]\n"
-"erwarten kannst."
+"Erfahre alles über die Vorteile und Neuerungen, die der schnellere Laserkopf "
+"Mr Beam II dreamcut [S] mit sich bringt."
 
 #: octoprint_mrbeam/templates/laserhead_changed.jinja2:12
 msgid "https://support.mr-beam.org/en/support/solutions/articles/43000640531"
