SW-511 changed wording

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2021-10-20 08:42+0200\n"
-"PO-Revision-Date: 2021-10-20 08:45+0200\n"
+"PO-Revision-Date: 2021-10-20 09:14+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -3344,9 +3344,9 @@ msgid ""
 "%(opening_tag)sthis link%(closing_tag)s and update your Mr&nbsp;Beam per USB "
 "stick."
 msgstr ""
-"Du kannst auch das neueste STABLE-Software-Update unter %(opening_tag)smr-"
-"beam.org/software-update-stick%(closing_tag)s herunterladen und Deinen "
-"Mr&nbsp;Beam per USB-Stick aktualisieren."
+"Du kannst auch das neueste STABLE-Software-Update unter "
+"%(opening_tag)sdiesem Link%(closing_tag)s herunterladen und Deinen Mr&nbsp;"
+"Beam per USB-Stick aktualisieren."
 
 # Settings > About Screen
 #: octoprint_mrbeam/templates/software_channel_selector.jinja2:17
