SW-661 removed dot from tranlsation and original string, and fixed missing space

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-11-17 10:07+0100\n"
-"PO-Revision-Date: 2021-11-17 10:07+0100\n"
+"POT-Creation-Date: 2021-11-17 11:40+0100\n"
+"PO-Revision-Date: 2021-11-17 11:41+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2273,10 +2273,10 @@ msgstr "Unerwünschte Brandflecken verhindern"
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:450
 msgid ""
 "This feature has been disabled as the burn marks issue has been resolved in "
-"our Software."
+"our Software"
 msgstr ""
 "Diese Funktion wurde entfernt, da das Problem mit dem neusten Softwareupdate "
-"behoben wurde."
+"behoben wurde"
 
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:458
 msgid "Auto"
@@ -2436,7 +2436,7 @@ msgid ""
 msgstr ""
 "Zur Erinnerung: Entferne niemals Komponenten, während dein Mr Beam noch "
 "aktiv ist! Um sicherzustellen, dass du ihn zuvor ausgeschaltet hast, zieh "
-"den Schlüssel ab und trenne ihn von derStromquelle."
+"den Schlüssel ab und trenne ihn von der Stromquelle."
 
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:678
 msgid "Don't remind me again"
