--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-11-17 10:07+0100\n"
+"POT-Creation-Date: 2021-11-17 11:40+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1953,7 +1953,7 @@ msgstr ""
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:450
 msgid ""
 "This feature has been disabled as the burn marks issue has been resolved "
-"in our Software."
+"in our Software"
 msgstr ""
 
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:458
