update hints and translation

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-05-05 09:39+0200\n"
-"PO-Revision-Date: 2022-05-05 09:42+0200\n"
+"POT-Creation-Date: 2022-05-05 10:33+0200\n"
+"PO-Revision-Date: 2022-05-05 10:34+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -752,10 +752,13 @@ msgid "Stainless Steel"
 msgstr "Edelstahl"
 
 #: octoprint_mrbeam/static/js/material_settings.js:376
-msgid "Engravings on stainless steel only work with our \"mark solid\" spray."
+msgid ""
+"Engravings on stainless steel only work with our \"mark solid\" spray. Use "
+"line distance 0,1mm for the best result."
 msgstr ""
 "Gravuren auf Edelstahl funktionieren nur mit unserm “Mark Solid” Laser "
-"Markierungsspray. "
+"Markierungsspray. Verwende einen Linienabstand von 0,1mm für ein optimales "
+"Ergebnis."
 
 #: octoprint_mrbeam/static/js/material_settings.js:377
 msgid ""
