some small adjustments

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-17 14:05+0100\n"
-"PO-Revision-Date: 2022-11-17 14:13+0100\n"
+"POT-Creation-Date: 2022-11-17 14:29+0100\n"
+"PO-Revision-Date: 2022-11-17 14:29+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2585,7 +2585,7 @@ msgid ""
 "An update has been installed on this Mr Beam. To use the new functions, the "
 "user interace must be completely reloaded."
 msgstr ""
-"Auf dem Mr Beam wurde ein update installiert. Um die neuen Funktionen nutzen "
+"Auf dem Mr Beam wurde ein Update installiert. Um die neuen Funktionen nutzen "
 "zu können muss die Benutzeroberfläche komplett neu geladen werden."
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:10
@@ -2606,11 +2606,11 @@ msgstr "Schließe dieses Fenster"
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:19
 msgid ""
-"I completeley reloaded the software ('Hard Refresh'). Do not show this again "
-"in the future"
+"I completely reloaded the software ('Hard Refresh'). Do not show this window "
+"again until the next update."
 msgstr ""
 "Ich habe die Software komplett neu geladen („Hard Refresh”). Dieses Fenster "
-"in Zukunft nicht erneut anzeigen"
+"bis zum nächsten Update nichtmehr anzeigen."
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:24
 msgid "Windows | Ctrl + Shift + R"
