--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-17 14:05+0100\n"
+"POT-Creation-Date: 2022-11-17 14:29+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2240,8 +2240,8 @@ msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:19
 msgid ""
-"I completeley reloaded the software ('Hard Refresh'). Do not show this "
-"again in the future"
+"I completely reloaded the software ('Hard Refresh'). Do not show this "
+"window again until the next update."
 msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:24
