--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-17 14:29+0100\n"
-"PO-Revision-Date: 2022-11-17 14:29+0100\n"
+"POT-Creation-Date: 2022-11-17 14:40+0100\n"
+"PO-Revision-Date: 2022-11-17 14:40+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2583,7 +2583,7 @@ msgstr "Nach dem letzten Software-Update ist ein „Hard Refresh” erfoderlich"
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:9
 msgid ""
 "An update has been installed on this Mr Beam. To use the new functions, the "
-"user interace must be completely reloaded."
+"user interface must be completely reloaded."
 msgstr ""
 "Auf dem Mr Beam wurde ein Update installiert. Um die neuen Funktionen nutzen "
 "zu können muss die Benutzeroberfläche komplett neu geladen werden."
@@ -2610,7 +2610,7 @@ msgid ""
 "again until the next update."
 msgstr ""
 "Ich habe die Software komplett neu geladen („Hard Refresh”). Dieses Fenster "
-"bis zum nächsten Update nichtmehr anzeigen."
+"bis zum nächsten Update nicht mehr anzeigen."
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:24
 msgid "Windows | Ctrl + Shift + R"
