--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-11 08:54+0100\n"
+"POT-Creation-Date: 2022-11-17 14:40+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2215,31 +2215,45 @@ msgid "It's focused!"
 msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:3
-msgid "Refresh is needed after the last Software Update"
+msgid "A 'Hard Refresh' is needed after the last Software Update"
 msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:9
 msgid ""
 "An update has been installed on this Mr Beam. To use the new functions, "
-"the user interace must be completely reloaded."
+"the user interface must be completely reloaded."
 msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:10
 msgid ""
-"We call this a hard refresh. To do this, press the three keys at the same"
-" time, depending on your operating system, as shown in the graphic:"
+"We call this a 'Hard Refresh'. To do this, press the three keys at the "
+"same time, depending on your operating system, as shown in the graphic:"
+msgstr ""
+
+#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:13
+msgid "Perform the 'Hard Refresh' using the keyboard shortcut"
 msgstr ""
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:14
+msgid "Close this Window"
+msgstr ""
+
+#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:19
+msgid ""
+"I completely reloaded the software ('Hard Refresh'). Do not show this "
+"window again until the next update."
+msgstr ""
+
+#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:24
 msgid "Windows | Ctrl + Shift + R"
 msgstr ""
 
-#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:16
+#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:26
 msgid "Mac | Command + Shift + R"
 msgstr ""
 
-#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:23
-msgid "Yes, I will reload the page"
+#: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:33
+msgid "Close window"
 msgstr ""
 
 #: octoprint_mrbeam/templates/homing_overlay.jinja2:50
